# ERP

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CREATE_DEPLOYMENT_PACKAGE.ps1  DATASHEET.md  DEPLOYMENT.md  Dockerfile  INSTALL_DEPLOYMENT.bat  MIGRATION_GUIDE.md  README.md  conftest.py  docker-compose.yml  docker-entrypoint.sh  entrypoint.sh  factories.py  manage.py  migrate_sqlite_to_postgresql.ps1  network.conf  parse_views.py  pyproject.toml  pytest.ini  requirements.txt  run_final_tests.ps1  run_full_test.ps1  run_full_test.sh  run_multi.py  run_seed.py  run_server.py  run_service.py  run_tests.ps1  run_waitress.py  set_ip.bat  setup_and_run.bat  start_production.bat  start_server.bat  stop.bat  test_bar.bat  test_counter.py
access_control/: admin.py  apps.py  models.py  resolver.py  tests.py  urls.py  views.py
accounting_system/: asgi.py  celery.py  middleware.py  settings.py  urls.py  views.py  wsgi.py
accounts/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
ai_analysis/: admin.py  analyzer.py  apps.py  detector.py  forms.py  models.py  prompts.py  standards.py  urls.py  views.py
api/: pagination.py  permissions.py  serializers.py  tests.py  urls.py  views.py
assets/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
audit/: admin.py  apps.py  context.py  middleware.py  models.py  urls.py  views.py
backups/: admin.py  apps.py  factory_reset.py  forms.py  models.py  tests.py  urls.py  views.py
bank_reconciliation/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
budget/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
cheques/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
common/: accounting_service.py  admin.py  apps.py  auto_number.py  compat.py  context_processors.py  db_utils.py  decimal_utils.py  dummy_generator.py  excel_utils.py  exceptions.py  models.py  pdf_utils.py  permissions.py  tasks.py  tests.py  urls.py  utils.py  validators.py  views.py  whatsapp.py  whatsapp_service.py
company/: admin.py  apps.py  context_processors.py  forms.py  models.py  urls.py  views.py
concrete_production/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
contractors/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
credit_notes/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
currency/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
deploy/: nginx_dual.conf  server_setup.sh  start_backend.bat  stress_test_postgresql.py
deployment/: alerts.py  auto_backup.py  health_check.py  monitoring.py  service.py  silent_update.py  tests.py  update_state.json
docs/: TECHNICAL_MIGRATION_GUIDE.html  TECHNICAL_MIGRATION_GUIDE.md  _scan_perms.py  accounting_system_explanation.html  build_guide.py  build_pdf.py  concrete_accounting_system.md  migration_guide.md  migration_plan.md  permissions_matrix.md  professional_assessment.html  professional_assessment.md  run_stop_guide.html  run_stop_guide.md  screens_catalog.html  screens_catalog.md  technical_spec_workflow.en.md  technical_spec_workflow.md  troubleshooting.html  troubleshooting.md  تقييم_احترافي.html  دليل_استكشاف_الأخطاء.html  دليل_الإجراءات_التقنية_الموحدة.md  دليل_التشغيل_والإيقاف.html  دليل_الشاشات_الشامل.html  نظام المحاسبة المتكامل لإنتاج الخرسانة.html
documents/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
goods_received/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
hr/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
installer/: build.py  build.spec  installer.iss
notifications/: admin.py  consumers.py  forms.py  models.py  urls.py  utils.py  views.py
payment_receipts/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
purchase_orders/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
purchase_returns/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
purchases/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
recurring/: admin.py  apps.py  forms.py  models.py  tasks.py  tests.py  urls.py  views.py
reports/: admin.py  generate_tests.py  models.py  parse_views.py  temp_generate.py  tests.py  urls.py  views.py
requirements/: dev.txt  prod.txt  web.txt
requisitions/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
rfq/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
sales/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
sales_orders/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
sales_quotation/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
sales_returns/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
scripts/: RUN_MIGRATION.bat  create_full_backup.ps1  install.bat  migrate_data.bat  migrate_sqlite_to_postgresql.ps1  package.bat  run.bat  run_seed.bat  setup.bat  setup_postgresql_server.ps1  start.bat  start_service.bat  update_env_postgresql.ps1
static/: manifest.json  sw.js
stock_adjustments/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
sync/: admin.py  forms.py  models.py  sync_engine.py  tasks.py  tests.py  urls.py  views.py
tax_invoices/: admin.py  apps.py  models.py  services.py  tests.py  urls.py  views.py
templates/: 404.html  500.html  dashboard.html
tests/: bar_test.py  test_accounting.py  test_all_forms.py  test_forms_validators.py  test_models.py  test_utils.py  test_utils_middleware.py
treasury/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
users/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
warehouses/: admin.py  apps.py  forms.py  (+4 more)
(+343 files in other folders)
