[project]
name = "accounting_system"
version = "1.0.0"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = ["venv", "migrations", "dist", "staticfiles", "media", "logs", "__pycache__", ".github"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "S", "B", "SIM"]
ignore = ["E501", "S101", "SIM117", "B028"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"test_*.py" = ["S101"]
"tests.py" = ["S101"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = true

[tool.coverage.run]
source = ["."]
omit = ["venv/*", "migrations/*", "staticfiles/*", "media/*", "logs/*", "__pycache__/*", ".github/*", "tests/*"]
relative_files = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "def __repr__", "raise AssertionError", "raise NotImplementedError", "if __name__ == .__main__.:", "class.*\\bMeta\\b", "@abc.abstractmethod"]
fail_under = 40

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "accounting_system.settings"
python_files = ["tests.py", "test_*.py"]
testpaths = ["tests", "accounts", "purchases", "sales", "api", "common", "hr", "assets", "stock_adjustments", "sync", "sales_returns", "purchase_returns", "backups", "bank_reconciliation", "credit_notes", "treasury", "recurring", "reports", "access_control", "contractors", "documents", "warehouses"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
